--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "module-ia-nird",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
+"scripts": {
+  "dev": "next dev --webpack",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+},
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
